Update swagger schema & Apply auth middleware
